--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ RUN apk --update --upgrade add --no-cache  gcc musl-dev jpeg-dev zlib-dev libffi
 RUN python -m pip install --upgrade pip
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-EXPOSE 7007
+EXPOSE 7007 5000
 COPY . .
 CMD [ "python", "app.py" ]
