--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,14 +1,31 @@
+
 server {
   listen 80;
   listen [::]:80;
   server_name localhost;
 
   location / {
-     proxy_pass http://front:3000;
+    proxy_pass http://front:3000;
+    proxy_set_header       Host $host;
+    proxy_buffering        on;
+    proxy_cache_valid      5m;
+    proxy_cache_use_stale error timeout invalid_header updating
+                          http_500 http_502 http_503 http_504;
   }
 
   location /api {
     proxy_pass http://api:7007;
+  }
+
+  location /socket.io/ {
+    proxy_buffering off;
+    proxy_http_version 1.1;
+    proxy_pass http://api:5000/socket.io;
+    proxy_set_header Host $host;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
   }
 
   error_page 500 502 503 504 /50x.html;
