--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,5 @@
-FROM busybox:1.35
+FROM nginx
 
-# Create a non-root user to own the files and run our server
-RUN adduser -D static
-USER static
-WORKDIR /home/static
+WORKDIR /usr/share/nginx/html
 
-# Copy the static website
-# Use the .dockerignore file to control what ends up inside the image!
 COPY . .
-
-# Run BusyBox httpd
-CMD ["busybox", "httpd", "-f", "-v", "-p", "3000"]
