--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -20,8 +20,9 @@ server {
   location /socket.io/ {
     proxy_buffering off;
     proxy_http_version 1.1;
-    proxy_pass http://websocket:5000/socket.io;
+    proxy_pass http://websocket:8000/socket.io;
     proxy_set_header Host $host;
+    proxy_set_header Origin  "";
     proxy_set_header Connection "Upgrade";
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
