--- a/websocket/requirements.txt
+++ b/websocket/requirements.txt
@@ -1,4 +1,9 @@
-Flask==1.1.2
+Flask==2.0.3
 Flask-Cors==3.0.9
 textract==1.6.3
 Flask-SocketIO==5.3.4
+gunicorn==21.2.0
+eventlet==0.33.3
+gevent==22.10.2
+APScheduler==3.3.1
+flask-sock==0.6.0
